--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.0",
+    "react-select": "^5.8.0",
+    "react-share": "^5.0.2",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.10.1"
   },
